# One-hot-mapper

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: integration-test.rs
